# travel-assistant-rag-langfuse

./: .env.example  .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  test_decorator.py  test_langfuse.py  test_main.py
app/: __init__.py  config.py  logging_config.py  models.py
app/api/: routes.py
app/graph/: nodes.py  state.py  travel_assistant.py
app/observability/: __init__.py  datadog.py  langfuse.py
app/rag/: __init__.py  pipeline.py  retriever.py  vector_store.py
scripts/: example_usage.py  ingest_data.py  test_setup.py
